# Copyright (c) 1994 - 2010, Lawrence Livermore National Security, LLC.
# LLNL-CODE-425250.
# All rights reserved.
# 
# This file is part of Silo. For details, see silo.llnl.gov.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 
#    * Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the disclaimer below.
#    * Redistributions in binary form must reproduce the above copyright
#      notice, this list of conditions and the disclaimer (as noted
#      below) in the documentation and/or other materials provided with
#      the distribution.
#    * Neither the name of the LLNS/LLNL nor the names of its
#      contributors may be used to endorse or promote products derived
#      from this software without specific prior written permission.
# 
# THIS SOFTWARE  IS PROVIDED BY  THE COPYRIGHT HOLDERS  AND CONTRIBUTORS
# "AS  IS" AND  ANY EXPRESS  OR IMPLIED  WARRANTIES, INCLUDING,  BUT NOT
# LIMITED TO, THE IMPLIED  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A  PARTICULAR  PURPOSE ARE  DISCLAIMED.  IN  NO  EVENT SHALL  LAWRENCE
# LIVERMORE  NATIONAL SECURITY, LLC,  THE U.S.  DEPARTMENT OF  ENERGY OR
# CONTRIBUTORS BE LIABLE FOR  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR  CONSEQUENTIAL DAMAGES  (INCLUDING, BUT NOT  LIMITED TO,
# PROCUREMENT OF  SUBSTITUTE GOODS  OR SERVICES; LOSS  OF USE,  DATA, OR
# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
# LIABILITY, WHETHER  IN CONTRACT, STRICT LIABILITY,  OR TORT (INCLUDING
# NEGLIGENCE OR  OTHERWISE) ARISING IN  ANY WAY OUT  OF THE USE  OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
# 
# This work was produced at Lawrence Livermore National Laboratory under
# Contract No.  DE-AC52-07NA27344 with the DOE.
# 
# Neither the  United States Government nor  Lawrence Livermore National
# Security, LLC nor any of  their employees, makes any warranty, express
# or  implied,  or  assumes  any  liability or  responsibility  for  the
# accuracy, completeness,  or usefulness of  any information, apparatus,
# product, or  process disclosed, or  represents that its use  would not
# infringe privately-owned rights.
# 
# Any reference herein to  any specific commercial products, process, or
# services by trade name,  trademark, manufacturer or otherwise does not
# necessarily  constitute or imply  its endorsement,  recommendation, or
# favoring  by  the  United  States  Government  or  Lawrence  Livermore
# National Security,  LLC. The views  and opinions of  authors expressed
# herein do not necessarily state  or reflect those of the United States
# Government or Lawrence Livermore National Security, LLC, and shall not
#
# Makefile.am --- automake input file for SiloWindows directory
#
## Process this file with automake to create Makefile.in
#
# Modifications:
#   Mark C. Miller, Tue Aug  3 17:24:43 PDT 2010
#   Ensure a number of silo project files were included.

EXTRA_DIST = \
./MSVC8/Tests/alltypes.vcproj\
./MSVC8/Tests/array.vcproj\
./MSVC8/Tests/array_f.vfproj\
./MSVC8/Tests/compression.vcproj\
./MSVC8/Tests/csg.vcproj\
./MSVC8/Tests/curve_f.vfproj\
./MSVC8/Tests/dirtest.vcproj\
./MSVC8/Tests/extface.vcproj\
./MSVC8/Tests/grab.vcproj\
./MSVC8/Tests/group_test.vcproj\
./MSVC8/Tests/largefile.vcproj\
./MSVC8/Tests/listtypes.vcproj\
./MSVC8/Tests/mat3d_3across.vcproj\
./MSVC8/Tests/mat_f.vfproj\
./MSVC8/Tests/merge_block.vcproj\
./MSVC8/Tests/mmadjacency.vcproj\
./MSVC8/Tests/multi_file.vcproj\
./MSVC8/Tests/multi_test.vcproj\
./MSVC8/Tests/multispec.vcproj\
./MSVC8/Tests/namescheme.vcproj\
./MSVC8/Tests/obj.vcproj\
./MSVC8/Tests/onehex.vcproj\
./MSVC8/Tests/oneprism.vcproj\
./MSVC8/Tests/onepyramid.vcproj\
./MSVC8/Tests/onetet.vcproj\
./MSVC8/Tests/partial_io.vcproj\
./MSVC8/Tests/point.vcproj\
./MSVC8/Tests/point_f.vfproj\
./MSVC8/Tests/polyzl.vcproj\
./MSVC8/Tests/quad.vcproj\
./MSVC8/Tests/rocket.vcproj\
./MSVC8/Tests/sami.vcproj\
./MSVC8/Tests/simple.vcproj\
./MSVC8/Tests/spec.vcproj\
./MSVC8/Tests/specmix.vcproj\
./MSVC8/Tests/subhex.vcproj\
./MSVC8/Tests/testall.vcproj\
./MSVC8/Tests/testall_f.vfproj\
./MSVC8/Tests/TestIncludes.vsprops\
./MSVC8/Tests/testpdb.vcproj\
./MSVC8/Tests/TestReadMask.vcproj\
./MSVC8/Tests/Tests.sln\
./MSVC8/Tests/twohex.vcproj\
./MSVC8/Tests/ucd1d.vcproj\
./MSVC8/Tests/ucd.vcproj\
./MSVC8/Tests/ucd_f.vfproj\
./MSVC8/Tests/ucdsamp3.vcproj\
./MSVC8/Tests/version.vcproj\
./MSVC8/Tests/wave.vcproj\
./MSVC8/bin/RunTests.bat\
./MSVC8/pdb_detect/pdb_detect.vcproj\
./MSVC8/BaseIncludes.vsprops\
./MSVC8/HDF5_Defines.vsprops\
./MSVC8/ModernDTPR.vsprops\
./MSVC8/NO_SEC_DEP.vsprops\
./MSVC8/NON_BSD_DEFINES.vsprops\
./MSVC8/silex.vcproj\
./MSVC8/Silo.vcproj\
./MSVC8/SiloWindows.sln\
./include/config.h\
./resources/silex.aps\
./resources/silex.ico\
./resources/silex.rc\
./Makefile.am\
./Makefile\
./runsilexmoc.bat\
./Makefile.in\
./copysilo.bat\
./README\
./MSVC8-BSD/Tests/alltypes.vcproj\
./MSVC8-BSD/Tests/array.vcproj\
./MSVC8-BSD/Tests/array_f.vfproj\
./MSVC8-BSD/Tests/compression.vcproj\
./MSVC8-BSD/Tests/csg.vcproj\
./MSVC8-BSD/Tests/curve_f.vfproj\
./MSVC8-BSD/Tests/dirtest.vcproj\
./MSVC8-BSD/Tests/extface.vcproj\
./MSVC8-BSD/Tests/grab.vcproj\
./MSVC8-BSD/Tests/group_test.vcproj\
./MSVC8-BSD/Tests/largefile.vcproj\
./MSVC8-BSD/Tests/listtypes.vcproj\
./MSVC8-BSD/Tests/mat3d_3across.vcproj\
./MSVC8-BSD/Tests/mat_f.vfproj\
./MSVC8-BSD/Tests/merge_block.vcproj\
./MSVC8-BSD/Tests/mmadjacency.vcproj\
./MSVC8-BSD/Tests/multi_file.vcproj\
./MSVC8-BSD/Tests/multi_test.vcproj\
./MSVC8-BSD/Tests/multispec.vcproj\
./MSVC8-BSD/Tests/namescheme.vcproj\
./MSVC8-BSD/Tests/obj.vcproj\
./MSVC8-BSD/Tests/onehex.vcproj\
./MSVC8-BSD/Tests/oneprism.vcproj\
./MSVC8-BSD/Tests/onepyramid.vcproj\
./MSVC8-BSD/Tests/onetet.vcproj\
./MSVC8-BSD/Tests/partial_io.vcproj\
./MSVC8-BSD/Tests/point.vcproj\
./MSVC8-BSD/Tests/point_f.vfproj\
./MSVC8-BSD/Tests/polyzl.vcproj\
./MSVC8-BSD/Tests/quad.vcproj\
./MSVC8-BSD/Tests/rocket.vcproj\
./MSVC8-BSD/Tests/sami.vcproj\
./MSVC8-BSD/Tests/simple.vcproj\
./MSVC8-BSD/Tests/spec.vcproj\
./MSVC8-BSD/Tests/specmix.vcproj\
./MSVC8-BSD/Tests/subhex.vcproj\
./MSVC8-BSD/Tests/testall.vcproj\
./MSVC8-BSD/Tests/testall_f.vfproj\
./MSVC8-BSD/Tests/TestIncludes.vsprops\
./MSVC8-BSD/Tests/testpdb.vcproj\
./MSVC8-BSD/Tests/TestReadMask.vcproj\
./MSVC8-BSD/Tests/Tests.sln\
./MSVC8-BSD/Tests/twohex.vcproj\
./MSVC8-BSD/Tests/ucd1d.vcproj\
./MSVC8-BSD/Tests/ucd.vcproj\
./MSVC8-BSD/Tests/ucd_f.vfproj\
./MSVC8-BSD/Tests/ucdsamp3.vcproj\
./MSVC8-BSD/Tests/version.vcproj\
./MSVC8-BSD/Tests/wave.vcproj\
./MSVC8-BSD/bin/RunTests.bat\
./MSVC8-BSD/pdb_detect/pdb_detect.vcproj\
./MSVC8-BSD/BaseIncludes.vsprops\
./MSVC8-BSD/HDF5_Defines.vsprops\
./MSVC8-BSD/ModernDTPR.vsprops\
./MSVC8-BSD/NO_SEC_DEP.vsprops\
./MSVC8-BSD/silex.vcproj\
./MSVC8-BSD/Silo.vcproj\
./MSVC8-BSD/SiloWindows.sln
