# Copyright (c) 1994 - 2010, Lawrence Livermore National Security, LLC.
# LLNL-CODE-425250.
# All rights reserved.
# 
# This file is part of Silo. For details, see silo.llnl.gov.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 
#    * Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the disclaimer below.
#    * Redistributions in binary form must reproduce the above copyright
#      notice, this list of conditions and the disclaimer (as noted
#      below) in the documentation and/or other materials provided with
#      the distribution.
#    * Neither the name of the LLNS/LLNL nor the names of its
#      contributors may be used to endorse or promote products derived
#      from this software without specific prior written permission.
# 
# THIS SOFTWARE  IS PROVIDED BY  THE COPYRIGHT HOLDERS  AND CONTRIBUTORS
# "AS  IS" AND  ANY EXPRESS  OR IMPLIED  WARRANTIES, INCLUDING,  BUT NOT
# LIMITED TO, THE IMPLIED  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A  PARTICULAR  PURPOSE ARE  DISCLAIMED.  IN  NO  EVENT SHALL  LAWRENCE
# LIVERMORE  NATIONAL SECURITY, LLC,  THE U.S.  DEPARTMENT OF  ENERGY OR
# CONTRIBUTORS BE LIABLE FOR  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR  CONSEQUENTIAL DAMAGES  (INCLUDING, BUT NOT  LIMITED TO,
# PROCUREMENT OF  SUBSTITUTE GOODS  OR SERVICES; LOSS  OF USE,  DATA, OR
# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
# LIABILITY, WHETHER  IN CONTRACT, STRICT LIABILITY,  OR TORT (INCLUDING
# NEGLIGENCE OR  OTHERWISE) ARISING IN  ANY WAY OUT  OF THE USE  OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
# 
# This work was produced at Lawrence Livermore National Laboratory under
# Contract No.  DE-AC52-07NA27344 with the DOE.
# 
# Neither the  United States Government nor  Lawrence Livermore National
# Security, LLC nor any of  their employees, makes any warranty, express
# or  implied,  or  assumes  any  liability or  responsibility  for  the
# accuracy, completeness,  or usefulness of  any information, apparatus,
# product, or  process disclosed, or  represents that its use  would not
# infringe privately-owned rights.
# 
# Any reference herein to  any specific commercial products, process, or
# services by trade name,  trademark, manufacturer or otherwise does not
# necessarily  constitute or imply  its endorsement,  recommendation, or
# favoring  by  the  United  States  Government  or  Lawrence  Livermore
# National Security,  LLC. The views  and opinions of  authors expressed
# herein do not necessarily state  or reflect those of the United States
# Government or Lawrence Livermore National Security, LLC, and shall not
#
# Makefile.am --- automake input file for SiloWindows directory
#
## Process this file with automake to create Makefile.in
#
# Modifications:
#   Mark C. Miller, Tue Aug  3 17:24:43 PDT 2010
#   Ensure a number of silo project files were included.
#
#   Kathleen Bonnell, Fri Dec 10 10:02:09 PST 2010
#   Add silodiff.bat, browser.vcproj
#
#   Kathleen Bonnell, Thu Mar 3 10:38:05 PST 2011
#   Add MSVC9 project files.


EXTRA_DIST = \
./MSVC9/Tests/alltypes.vcproj\
./MSVC9/Tests/array.vcproj\
./MSVC9/Tests/array_f.vfproj\
./MSVC9/Tests/compression.vcproj\
./MSVC9/Tests/csg.vcproj\
./MSVC9/Tests/curve_f.vfproj\
./MSVC9/Tests/dirtest.vcproj\
./MSVC9/Tests/extface.vcproj\
./MSVC9/Tests/grab.vcproj\
./MSVC9/Tests/group_test.vcproj\
./MSVC9/Tests/largefile.vcproj\
./MSVC9/Tests/listtypes.vcproj\
./MSVC9/Tests/mat3d_3across.vcproj\
./MSVC9/Tests/mat_f.vfproj\
./MSVC9/Tests/merge_block.vcproj\
./MSVC9/Tests/mmadjacency.vcproj\
./MSVC9/Tests/multi_file.vcproj\
./MSVC9/Tests/multi_test.vcproj\
./MSVC9/Tests/multispec.vcproj\
./MSVC9/Tests/namescheme.vcproj\
./MSVC9/Tests/obj.vcproj\
./MSVC9/Tests/onehex.vcproj\
./MSVC9/Tests/oneprism.vcproj\
./MSVC9/Tests/onepyramid.vcproj\
./MSVC9/Tests/onetet.vcproj\
./MSVC9/Tests/partial_io.vcproj\
./MSVC9/Tests/point.vcproj\
./MSVC9/Tests/point_f.vfproj\
./MSVC9/Tests/polyzl.vcproj\
./MSVC9/Tests/Preparation.vcproj\
./MSVC9/Tests/quad.vcproj\
./MSVC9/Tests/quad_f.vfproj\
./MSVC9/Tests/rocket.vcproj\
./MSVC9/Tests/sami.vcproj\
./MSVC9/Tests/simple.vcproj\
./MSVC9/Tests/spec.vcproj\
./MSVC9/Tests/specmix.vcproj\
./MSVC9/Tests/subhex.vcproj\
./MSVC9/Tests/testall.vcproj\
./MSVC9/Tests/testall_f.vfproj\
./MSVC9/Tests/testpdb.vcproj\
./MSVC9/Tests/TestReadMask.vcproj\
./MSVC9/Tests/twohex.vcproj\
./MSVC9/Tests/ucd1d.vcproj\
./MSVC9/Tests/ucd.vcproj\
./MSVC9/Tests/ucd_f.vfproj\
./MSVC9/Tests/ucdsamp3.vcproj\
./MSVC9/Tests/version.vcproj\
./MSVC9/Tests/wave.vcproj\
./MSVC9/Tests/Tests.sln\
./MSVC9/Tests/CopyTestDependencies.bat\
./MSVC9/Tests/TestIncludes.vsprops\
./MSVC9/bin/RunTests.bat\
./MSVC9/pdb_detect/pdb_detect.vcproj\
./MSVC9/BaseIncludes.vsprops\
./MSVC9/DepLibs.vsprops\
./MSVC9/HDF5_Defines.vsprops\
./MSVC9/ModernDTPR.vsprops\
./MSVC9/NO_SEC_DEP.vsprops\
./MSVC9/NON_BSD_DEFINES.vsprops\
./MSVC9/QT_Defines.vsprops\
./MSVC9/browser.vcproj\
./MSVC9/silex.vcproj\
./MSVC9/Silo.vcproj\
./MSVC9/SiloWindows.sln\
./include/config.h\
./resources/silex.aps\
./resources/silex.ico\
./resources/silex.rc\
./Makefile.am\
./Makefile\
./runsilexmoc.bat\
./Makefile.in\
./copysilo.bat\
./silodiff.bat\
./README\
./MSVC8-BSD/SiloWindows.sln\
./MSVC9-BSD/Tests/alltypes.vcproj\
./MSVC9-BSD/Tests/array.vcproj\
./MSVC9-BSD/Tests/array_f.vfproj\
./MSVC9-BSD/Tests/compression.vcproj\
./MSVC9-BSD/Tests/csg.vcproj\
./MSVC9-BSD/Tests/curve_f.vfproj\
./MSVC9-BSD/Tests/dirtest.vcproj\
./MSVC9-BSD/Tests/extface.vcproj\
./MSVC9-BSD/Tests/grab.vcproj\
./MSVC9-BSD/Tests/group_test.vcproj\
./MSVC9-BSD/Tests/largefile.vcproj\
./MSVC9-BSD/Tests/listtypes.vcproj\
./MSVC9-BSD/Tests/mat3d_3across.vcproj\
./MSVC9-BSD/Tests/mat_f.vfproj\
./MSVC9-BSD/Tests/merge_block.vcproj\
./MSVC9-BSD/Tests/mmadjacency.vcproj\
./MSVC9-BSD/Tests/multi_file.vcproj\
./MSVC9-BSD/Tests/multi_test.vcproj\
./MSVC9-BSD/Tests/multispec.vcproj\
./MSVC9-BSD/Tests/namescheme.vcproj\
./MSVC9-BSD/Tests/obj.vcproj\
./MSVC9-BSD/Tests/onehex.vcproj\
./MSVC9-BSD/Tests/oneprism.vcproj\
./MSVC9-BSD/Tests/onepyramid.vcproj\
./MSVC9-BSD/Tests/onetet.vcproj\
./MSVC9-BSD/Tests/partial_io.vcproj\
./MSVC9-BSD/Tests/point.vcproj\
./MSVC9-BSD/Tests/point_f.vfproj\
./MSVC9-BSD/Tests/polyzl.vcproj\
./MSVC9-BSD/Tests/Preparation.vcproj\
./MSVC9-BSD/Tests/quad.vcproj\
./MSVC9-BSD/Tests/quad_f.vfproj\
./MSVC9-BSD/Tests/rocket.vcproj\
./MSVC9-BSD/Tests/sami.vcproj\
./MSVC9-BSD/Tests/simple.vcproj\
./MSVC9-BSD/Tests/spec.vcproj\
./MSVC9-BSD/Tests/specmix.vcproj\
./MSVC9-BSD/Tests/subhex.vcproj\
./MSVC9-BSD/Tests/testall.vcproj\
./MSVC9-BSD/Tests/testall_f.vfproj\
./MSVC9-BSD/Tests/testpdb.vcproj\
./MSVC9-BSD/Tests/TestReadMask.vcproj\
./MSVC9-BSD/Tests/twohex.vcproj\
./MSVC9-BSD/Tests/ucd1d.vcproj\
./MSVC9-BSD/Tests/ucd.vcproj\
./MSVC9-BSD/Tests/ucd_f.vfproj\
./MSVC9-BSD/Tests/ucdsamp3.vcproj\
./MSVC9-BSD/Tests/version.vcproj\
./MSVC9-BSD/Tests/wave.vcproj\
./MSVC9-BSD/Tests/Tests.sln\
./MSVC9-BSD/Tests/CopyTestDependencies.bat\
./MSVC9-BSD/Tests/TestIncludes.vsprops\
./MSVC9-BSD/bin/RunTests.bat\
./MSVC9-BSD/pdb_detect/pdb_detect.vcproj\
./MSVC9-BSD/BaseIncludes.vsprops\
./MSVC9-BSD/DepLibs.vsprops\
./MSVC9-BSD/HDF5_Defines.vsprops\
./MSVC9-BSD/ModernDTPR.vsprops\
./MSVC9-BSD/NO_SEC_DEP.vsprops\
./MSVC9-BSD/QT_Defines.vsprops\
./MSVC9-BSD/browser.vcproj\
./MSVC9-BSD/silex.vcproj\
./MSVC9-BSD/Silo.vcproj\
./MSVC9-BSD/SiloWindows.sln
