# Copyright (c) 1994 - 2010, Lawrence Livermore National Security, LLC.
# LLNL-CODE-425250.
# All rights reserved.
# 
# This file is part of Silo. For details, see silo.llnl.gov.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 
#    * Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the disclaimer below.
#    * Redistributions in binary form must reproduce the above copyright
#      notice, this list of conditions and the disclaimer (as noted
#      below) in the documentation and/or other materials provided with
#      the distribution.
#    * Neither the name of the LLNS/LLNL nor the names of its
#      contributors may be used to endorse or promote products derived
#      from this software without specific prior written permission.
# 
# THIS SOFTWARE  IS PROVIDED BY  THE COPYRIGHT HOLDERS  AND CONTRIBUTORS
# "AS  IS" AND  ANY EXPRESS  OR IMPLIED  WARRANTIES, INCLUDING,  BUT NOT
# LIMITED TO, THE IMPLIED  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A  PARTICULAR  PURPOSE ARE  DISCLAIMED.  IN  NO  EVENT SHALL  LAWRENCE
# LIVERMORE  NATIONAL SECURITY, LLC,  THE U.S.  DEPARTMENT OF  ENERGY OR
# CONTRIBUTORS BE LIABLE FOR  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR  CONSEQUENTIAL DAMAGES  (INCLUDING, BUT NOT  LIMITED TO,
# PROCUREMENT OF  SUBSTITUTE GOODS  OR SERVICES; LOSS  OF USE,  DATA, OR
# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
# LIABILITY, WHETHER  IN CONTRACT, STRICT LIABILITY,  OR TORT (INCLUDING
# NEGLIGENCE OR  OTHERWISE) ARISING IN  ANY WAY OUT  OF THE USE  OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
# 
# This work was produced at Lawrence Livermore National Laboratory under
# Contract No.  DE-AC52-07NA27344 with the DOE.
# 
# Neither the  United States Government nor  Lawrence Livermore National
# Security, LLC nor any of  their employees, makes any warranty, express
# or  implied,  or  assumes  any  liability or  responsibility  for  the
# accuracy, completeness,  or usefulness of  any information, apparatus,
# product, or  process disclosed, or  represents that its use  would not
# infringe privately-owned rights.
# 
# Any reference herein to  any specific commercial products, process, or
# services by trade name,  trademark, manufacturer or otherwise does not
# necessarily  constitute or imply  its endorsement,  recommendation, or
# favoring  by  the  United  States  Government  or  Lawrence  Livermore
# National Security,  LLC. The views  and opinions of  authors expressed
# herein do not necessarily state  or reflect those of the United States
# Government or Lawrence Livermore National Security, LLC, and shall not
#
# Makefile.am --- automake input file for SiloWindows directory
#
## Process this file with automake to create Makefile.in
#
# Modifications:
#   Mark C. Miller, Tue Aug  3 17:24:43 PDT 2010
#   Ensure a number of silo project files were included.
#
#   Kathleen Bonnell, Fri Dec 10 10:02:09 PST 2010
#   Add silodiff.bat, browser.vcxproj
#
#   Kathleen Bonnell, Thu Mar 3 10:38:05 PST 2011
#   Add MSVC2012 project files.
#
#   Kathleen Bonnell, Thu Mar 3 10:38:05 PST 2011
#   Remove MSVC2012 and MSVC2010 project files. Add MSVC2012 project files.



EXTRA_DIST = \
./MSVC2012/Tests/alltypes.vcxproj\
./MSVC2012/Tests/arbpoly.vcxproj\
./MSVC2012/Tests/arbpoly3d.vcxproj\
./MSVC2012/Tests/array.vcxproj\
./MSVC2012/Tests/array_f.vfproj\
./MSVC2012/Tests/compression.vcxproj\
./MSVC2012/Tests/csg.vcxproj\
./MSVC2012/Tests/csgmesh_f.vfproj\
./MSVC2012/Tests/curve_f.vfproj\
./MSVC2012/Tests/dirtest.vcxproj\
./MSVC2012/Tests/empty.vcxproj\
./MSVC2012/Tests/extface.vcxproj\
./MSVC2012/Tests/grab.vcxproj\
./MSVC2012/Tests/group_test.vcxproj\
./MSVC2012/Tests/largefile.vcxproj\
./MSVC2012/Tests/listtypes.vcxproj\
./MSVC2012/Tests/mat3d_3across.vcxproj\
./MSVC2012/Tests/mat_f.vfproj\
./MSVC2012/Tests/merge_block.vcxproj\
./MSVC2012/Tests/mmadjacency.vcxproj\
./MSVC2012/Tests/multi_file.vcxproj\
./MSVC2012/Tests/multi_test.vcxproj\
./MSVC2012/Tests/multispec.vcxproj\
./MSVC2012/Tests/namescheme.vcxproj\
./MSVC2012/Tests/obj.vcxproj\
./MSVC2012/Tests/onehex.vcxproj\
./MSVC2012/Tests/oneprism.vcxproj\
./MSVC2012/Tests/onepyramid.vcxproj\
./MSVC2012/Tests/onetet.vcxproj\
./MSVC2012/Tests/partial_io.vcxproj\
./MSVC2012/Tests/point.vcxproj\
./MSVC2012/Tests/point_f.vfproj\
./MSVC2012/Tests/polyzl.vcxproj\
./MSVC2012/Tests/Preparation.vcxproj\
./MSVC2012/Tests/quad.vcxproj\
./MSVC2012/Tests/quad_f.vfproj\
./MSVC2012/Tests/sami.vcxproj\
./MSVC2012/Tests/simple.vcxproj\
./MSVC2012/Tests/spec.vcxproj\
./MSVC2012/Tests/specmix.vcxproj\
./MSVC2012/Tests/subhex.vcxproj\
./MSVC2012/Tests/testall.vcxproj\
./MSVC2012/Tests/testall_f.vfproj\
./MSVC2012/Tests/testfs.vcxproj\
./MSVC2012/Tests/testpdb.vcxproj\
./MSVC2012/Tests/TestReadMask.vcxproj\
./MSVC2012/Tests/twohex.vcxproj\
./MSVC2012/Tests/ucd1d.vcxproj\
./MSVC2012/Tests/ucd.vcxproj\
./MSVC2012/Tests/ucd_f.vfproj\
./MSVC2012/Tests/ucdsamp3.vcxproj\
./MSVC2012/Tests/version.vcxproj\
./MSVC2012/Tests/wave.vcxproj\
./MSVC2012/Tests/Tests.sln\
./MSVC2012/Tests/CopyTestDependencies.bat\
./MSVC2012/Tests/TestIncludes.props\
./MSVC2012/bin/RunTests.bat\
./MSVC2012/pdb_detect/pdb_detect.vcxproj\
./MSVC2012/pdb_detect/pdb_detect.vcxproj.filters\
./MSVC2012/BaseIncludes.props\
./MSVC2012/DepLibs.props\
./MSVC2012/HDF5_Defines.props\
./MSVC2012/ModernDTPR.props\
./MSVC2012/NO_SEC_DEP.props\
./MSVC2012/NON_BSD_DEFINES.props\
./MSVC2012/QT_Defines.props\
./MSVC2012/browser.vcxproj\
./MSVC2012/browser.vcxproj.filters\
./MSVC2012/silex.vcxproj\
./MSVC2012/silex.vcxproj.filters\
./MSVC2012/Silo.vcxproj\
./MSVC2012/Silo.vcxproj.filters\
./MSVC2012/Silo.sln\
./include/config.h\
./resources/silex.aps\
./resources/silex.ico\
./resources/silex.rc\
./Makefile.am\
./Makefile\
./runsilexmoc.bat\
./Makefile.in\
./copysilo.bat\
./silodiff.bat\
./README\
./MSVC2012-BSD/pdb_detect/pdb_detect.vcxproj\
./MSVC2012-BSD/pdb_detect/pdb_detect.vcxproj.filters\
./MSVC2012-BSD/BaseIncludes.props\
./MSVC2012-BSD/DepLibs.props\
./MSVC2012-BSD/HDF5_Defines.props\
./MSVC2012-BSD/ModernDTPR.props\
./MSVC2012-BSD/NO_SEC_DEP.props\
./MSVC2012-BSD/QT_Defines.props\
./MSVC2012-BSD/browser.vcxproj\
./MSVC2012-BSD/browser.vcxproj.filters\
./MSVC2012-BSD/silex.vcxproj\
./MSVC2012-BSD/silex.vcxproj.filters\
./MSVC2012-BSD/Silo.vcxproj\
./MSVC2012-BSD/Silo.vcxproj.filters\
./MSVC2012-BSD/Silo.sln
