#
# Makefile.am --- automake input file for Silo
#
## Process this file with automake to create Makefile.in
 
EXTRA_DIST = \
 branchfiles \
 lockbug.script \
 locknew.script \
 makebug \
 makenew \
 mkman \
 package \
 set-version-number \
 silo-dist \
 silo-release-open \
 _target \
 target.c \
 unlockbug.script \
 unlocknew.script \
 winsilo-dist
