#
# Makefile.am --- automake input file for Silo
#
## Process this file with automake to create Makefile.in
 
EXTRA_DIST = \
 AIX.conf \
 HP-UX.conf \
 IRIX.conf \
 IRIX64.conf \
 Linux.conf \
 OSF1.conf \
 README \
 SunOS.conf \
 bgl1.conf \
 bgl2.conf \
 bgl3.conf \
 bgl4.conf \
 bgl5.conf \
 bgl6.conf \
 bgl7.conf \
 bgl8.conf \
 bgl9.conf \
 bgl10.conf \
 bgl11.conf \
 fc0.llnl.gov.conf \
 fhp.conf \
 gps.conf \
 gps01.conf \
 gps02.conf \
 gps15.conf \
 gps16.conf \
 janus.conf \
 kickit.conf \
 pacific.llnl.gov.conf \
 pcr.llnl.gov.conf \
 pengra0.conf \
 quad.llnl.gov.conf \
 sandia_paragon \
 sasn100.conf \
 sphere.llnl.gov.conf \
 t3d \
 tc.conf \
 tc127.conf \
 tidalwave.conf \
 ubgl.conf
