#
# Makefile.am --- automake input file for Silo
#
## Process this file with automake to create Makefile.in
 
EXTRA_DIST = \
 AIX.conf \
 HP-UX.conf \
 IRIX.conf \
 IRIX64.conf \
 Linux.conf \
 Makefile \
 Makefile.am \
 Makefile.in \
 OSF1.conf \
 README \
 SunOS.conf \
 bgl1.conf \
 bgl10.conf \
 bgl11.conf \
 bgl2.conf \
 bgl3.conf \
 bgl4.conf \
 bgl5.conf \
 bgl6.conf \
 bgl7.conf \
 bgl8.conf \
 bgl9.conf \
 fhp.conf \
 gauss.conf \
 gauss0.conf \
 gauss1.conf \
 gauss2.conf \
 gauss3.conf \
 gps.conf \
 hoth.conf \
 janus.conf \
 kickit.conf \
 naboo.conf \
 pengra.conf \
 pengra0.conf \
 purple.conf \
 quad.conf \
 quad.llnl.gov.conf \
 rhe32.conf \
 rhe512.conf \
 rhea.conf \
 rhea0.conf \
 sandia_paragon \
 sasn100.conf \
 sphere.llnl.gov.conf \
 sunset.conf \
 sunspot.conf \
 t3d \
 tc.conf \
 tc127.conf \
 thunder.conf \
 thunder0.conf \
 thunder1.conf \
 thunder2.conf \
 thunder3.conf \
 tidalwave.conf \
 ubgl.conf \
 up.conf \
 up038.conf \
 up039.conf \
 up041.conf \
 uv.conf \
 uv006.conf \
 x86_64.conf \
 yana.conf \
 yana1.conf \
 yana2.conf \
 yana3.conf \
 yana4.conf \
 zeus.conf 
