#
# Makefile.am --- automake input file for Silo
#
## Process this file with automake to create Makefile.in
 
EXTRA_DIST = \
 AIX.conf \
 Darwin.conf \
 HP-UX.conf \
 IRIX.conf \
 IRIX64.conf \
 Linux.conf \
 OSF1.conf \
 README \
 SunOS.conf \
 alc1.conf \
 alc2.conf \
 atlas0.conf \
 atlas1088.conf \
 atlas1120.conf \
 atlas32.conf \
 atlas512.conf \
 atlas544.conf \
 atlas576.conf \
 atlas608.conf \
 bgl1.conf \
 bgl10.conf \
 bgl11.conf \
 bgl2.conf \
 bgl3.conf \
 bgl4.conf \
 bgl5.conf \
 bgl6.conf \
 bgl7.conf \
 bgl8.conf \
 bgl9.conf \
 delenn.conf \
 fhp.conf \
 gauss.conf \
 gauss0.conf \
 gauss1.conf \
 gauss2.conf \
 gauss3.conf \
 hoth.conf \
 janus.conf \
 kickit.conf \
 lilac.conf \
 lilac0.conf \
 lilac1.conf \
 lilac2.conf \
 lilac3.conf \
 localhost.conf \
 minos.conf \
 minos0.conf \
 minos32.conf \
 minos512.conf \
 minos544.conf \
 minos576.conf \
 minos608.conf \
 naboo.conf \
 pengra.conf \
 pengra0.conf \
 pengra1.conf \
 pengra2.conf \
 pengra3.conf \
 pengra12.conf \
 pengra13.conf \
 pengra14.conf \
 pengra15.conf \
 prism1.conf \
 prism2.conf \
 purple.conf \
 purple1441.conf \
 purple1442.conf \
 purple1443.conf \
 purple1444.conf \
 quad.conf \
 queen.conf \
 queen1.conf \
 queen2.conf \
 queen3.conf \
 queen4.conf \
 rhea.conf \
 rhea0.conf \
 rhea32.conf \
 rhea512.conf \
 rhea544.conf \
 sandia_paragon \
 sasn100.conf \
 sidious.conf \
 sphere.conf \
 sunburn.conf \
 sunset.conf \
 sunspot.conf \
 t3d.conf \
 tc.conf \
 tc127.conf \
 thunder.conf \
 thunder0.conf \
 thunder1.conf \
 thunder2.conf \
 thunder3.conf \
 tread.conf \
 ubgl.conf \
 um.conf \
 um006.conf \
 up.conf \
 up038.conf \
 up039.conf \
 up041.conf \
 uv.conf \
 uv006.conf \
 vader.conf \
 x86_64.conf \
 yana.conf \
 yana1.conf \
 yana2.conf \
 yana3.conf \
 yana4.conf \
 zeus.conf \
 zeus279.conf
